# xarm_ros2

./: .gitignore  .gitmodules  README.md  dependencies.repos  docker-compose.yaml  src.code-workspace
.colcon/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
.colcon/install/arm_servos_pubs_subs/lib/arm_servos_pubs_subs/: listener  talker
.colcon/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
.colcon/log/: latest_build
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile  entrypoint.sh
xarm1s_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
xarm1s_moveit_config/config/: joint_limits.yaml  moveit.rviz  ros2_controllers.yaml  xarm_1s.ros2_control.xacro  xarm_1s.srdf  xarm_1s.urdf.xacro
xarm1s_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
xarm_bringup/: CMakeLists.txt  package.xml
xarm_bringup/launch/: start_xarm.launch.py
xarm_bringup/src/: test_serial.cpp
xarm_control/: CMakeLists.txt  package.xml  xarm_control.xml
xarm_control/hardware/: xarm_hardware.cpp
xarm_control/hardware/include/xarm_control/: esp_comms.hpp  joint.hpp  xarm_hardware.hpp
xarm_control/xArm_Serial/: platformio.ini
xarm_control/xArm_Serial/src/: main.cpp
xarm_description/: CMakeLists.txt  package.xml
xarm_description/launch/: display.launch.py  test_node.py
xarm_description/meshes/stls/: finger_l.stl  finger_r.stl  gripper_base.stl
xarm_description/rviz/: view_robot.rviz
xarm_description/urdf/: camera.urdf.xacro  gripper.urdf.xacro  xarm.urdf.xacro  xarm_1s.urdf.xacro  xarm_world.urdf.xacro
xarm_gazebo/: CMakeLists.txt  package.xml
xarm_gazebo/config/: gz_params.yaml  test.yaml
xarm_gazebo/launch/: sim_xarm.launch.py  start_world.launch.py  test_sim.launch.py
xarm_gazebo/models/Desk/: Desk.mtl
xarm_gazebo/models/Office/: Office.mtl  office.mtl
xarm_gazebo/worlds/: xarm.world  xarm_desk_world.sdf
xarm_microros/: platformio.ini
xarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
xarm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  xarm.ros2_control.xacro  xarm.srdf  xarm.urdf.xacro
xarm_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py
xarm_moveit_config/rviz/: view_robot.rviz
xarm_support/: CMakeLists.txt  package.xml
xarm_support/launch/: sim_xarm.launch.py  start_xarm.launch.py
xarm_support/src/: xarm_servo_cmd.cpp
(+180 files in other folders)
